fix: test started the game and instruction wasnt visible

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <canvas id="game-canvas"></canvas>
         <div class="game-controls">
             <p>Press SPACE or UP ARROW to jump. Press twice for double jump!</p>
+            <p>Press SHIFT or RIGHT ARROW to attack.</p>
             <button id="start-button">Start Game</button>
             <button id="restart-button" style="display: none;">Restart Game</button>
         </div>
